--- a/naoehsopor20centavos.css
+++ b/naoehsopor20centavos.css
@@ -1,3 +1,92 @@
+body {
+  padding-bottom: 40px;
+}
+
+/* Carousel base class */
+.carousel {
+  margin-bottom: 60px;
+}
+
+.carousel .container {
+  position: relative;
+  z-index: 9;
+}
+
+.carousel .item {
+  height: 500px;
+}
+.carousel img {
+  position: absolute;
+  top: -780px;
+  left: 0;
+  min-width: 1980px;
+}
+
+.carousel-caption {
+  background-color: transparent;
+  position: static;
+  max-width: 550px;
+  padding: 0 20px;
+  margin-top: 200px;
+}
+.carousel-caption h1,
+.carousel-caption .lead {
+  margin: 0;
+  line-height: 1.25;
+  color: #fff;
+  text-shadow: 0 1px 1px rgba(0,0,0,.4);
+}
+.carousel-caption .btn {
+  margin-top: 10px;
+}
+
 blockquote p:hover {
   cursor: pointer;
+}
+
+div.popover {
+  position: absolute;
+  left: auto !important;
+}
+
+@media (max-width: 979px) {
+  .carousel .item {
+    height: 500px;
+  }
+  .carousel img {
+    top: 0px;
+    min-width: 979px;
+    height: 500px;
+  }
+}
+
+@media (max-width: 767px) {
+  .carousel {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+  .carousel .container {
+
+  }
+  .carousel .item {
+    height: 300px;
+  }
+  .carousel img {
+    top: 0px;
+    left: 0;
+    min-width: 797px;
+    height: 300px;
+  }
+  .carousel-caption {
+    width: 65%;
+    padding: 0 70px;
+    margin-top: 100px;
+  }
+  .carousel-caption h1 {
+    font-size: 30px;
+  }
+  .carousel-caption .lead,
+  .carousel-caption .btn {
+    font-size: 18px;
+  }
 }
