maior espacamento entre propostas

--- a/naoehsopor20centavos.css
+++ b/naoehsopor20centavos.css
@@ -49,6 +49,10 @@ div.popover {
   left: auto !important;
 }
 
+blockquote {
+  margin-bottom: 50px;
+}
+
 blockquote small {
   display: inline;
 }
